crates/dsrs-macros/tests/ui/field_both_input_output.stderr
error: field cannot be both #[input] and #[output]
 --> tests/ui/field_both_input_output.rs:5:5
  |
5 | /     #[input]
6 | |     #[output]
7 | |     value: String,
  | |_________________^
