crates/dsrs-macros/tests/ui/field_both_input_output.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct BothAttrs {
    #[input]
    #[output]
    value: String,
}

fn main() {}
